tests/ui/const-generics/fn-item-as-const-arg-137084.stderr
error: function items cannot be used as const args
  --> $DIR/fn-item-as-const-arg-137084.rs:9:9
   |
LL |     a::<d>
   |         ^

error: aborting due to 1 previous error

